# supergradients

./: my_train.py  pyproject.toml
notebooks/: DEKR_PoseEstimationFineTuning.ipynb  Segmentation_Model_Export.ipynb  dataloader_adapter.ipynb  detection_how_to_connect_custom_dataset.ipynb  detection_transfer_learning.ipynb  how_to_run_model_predict.ipynb  how_to_use_knowledge_distillation_for_classification.ipynb  quickstart_segmentation.ipynb  segmentation_connect_custom_dataset.ipynb  transfer_learning_semantic_segmentation.ipynb  what_are_recipes_and_how_to_use.ipynb  yolo_nas_custom_dataset_fine_tuning_with_qat.ipynb  yolo_nas_pose_eval_with_pycocotools.ipynb
scripts/: version-up.sh
src/super_gradients/: my_train.py  my_utils.py
src/super_gradients/config/: default_yolo.yaml
src/super_gradients/data/: aic24_fisheye8k_of.yaml
src/super_gradients/examples/: SG_Walkthrough.ipynb  SG_quickstart_classification.ipynb  SG_quickstart_model_upload_deci_lab.ipynb  SG_quickstart_tensorboard_logger.ipynb
src/super_gradients/training/datasets/: mixup.py
src/super_gradients/training/models/classification_models/: preact_resnet.py  resnet.py  vit.py
src/super_gradients/training/models/segmentation_models/: laddernet.py
tutorials/: DagsHub_X_SuperGradients.ipynb
