[tool.poetry]
name        = "supergradients"
version     = "0.1.0"
description = "super_gradients"
license     = "MIT License"
authors     = [
]
packages = [
    {include="super_gradients", from="src"},
]
include  = []
exclude  = []

[tool.poetry.dependencies]
boto3            = {version="*", optional=true}
data_gradients   = {version="*", optional=true}
deprecated       = {version="*", optional=true}
hydra-core       = {version="*", optional=true}
json-tricks      = {version="*", optional=true}
omegaconf        = {version="*", optional=true}
onnx             = {version="*", optional=true}
onnxsim          = {version="*", optional=true}
pip-tools        = {version="*", optional=true}
sphinx-rtd-theme = {version="*", optional=true}
stringcase       = {version="*", optional=true}
treelib          = {version="*", optional=true}

[build-system]
requires      = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


## Super-Gradients configuration for black/mypy/isort etc tools.
[tool.isort]
profile = "black"
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
line_length = 160

## Configuration for Black.
[tool.black]
line-length = 160
target-version = ['py36', 'py37', 'py38', 'py39' ]
include = '\.pyi?$'
exclude = '''
/(
    \.eggs
  | \.git
  | \.circleci
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''
